MIGRATION-SC/baseline-openshift/sensor.yaml







apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    app: sensor
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  replicas: 1
  minReadySeconds: 15
  selector:
    matchLabels:
      app: sensor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sensor
        app.kubernetes.io/component: sensor
        app.kubernetes.io/instance: stackrox-secured-cluster-services
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: stackrox
        app.kubernetes.io/part-of: stackrox-secured-cluster-services
        app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
        helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: "8443,9443"
        email: support@stackrox.com
        meta.helm.sh/release-name: stackrox-secured-cluster-services
        meta.helm.sh/release-namespace: stackrox
        owner: stackrox
        openshift.io/required-scc: restricted-v2
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: NotIn
                values:
                - "true"
            weight: 100
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists
            weight: 50
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/compute
                operator: Exists
            weight: 25
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
            weight: 100
      serviceAccountName: sensor
      containers:
      - image: "quay.io/rhacs-eng/main:4.11.x-642-g9ef4d6250d"
        imagePullPolicy: IfNotPresent
        name: sensor
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /ready
            port: 9443
        ports:
          - containerPort: 8443
            name: api
          - containerPort: 9443
            name: webhook
          - containerPort: 9091
            name: monitoring-tls
          - containerPort: 9444
            name: proxy-https
        command:
          - kubernetes-sensor
        resources:
          limits:
            cpu: "4"
            memory: 8Gi
          requests:
            cpu: "2"
            memory: 4Gi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: varlog
          mountPath: /var/log/stackrox/
        - name: sensor-etc-ssl-volume
          mountPath: /etc/ssl/
        - name: sensor-etc-pki-volume
          mountPath: /etc/pki/ca-trust/
        - name: certs
          mountPath: /run/secrets/stackrox.io/certs/
          readOnly: true
        - name: additional-ca-volume
          mountPath: /usr/local/share/ca-certificates/
          readOnly: true
        - name: cache
          mountPath: /var/cache/stackrox
        - name: sensor-bound-sa-token
          mountPath: /var/run/secrets/openshift/serviceaccount
        
        - name: trusted-ca-volume
          mountPath: /etc/pki/injected-ca-trust/
          readOnly: true
        
        
        - name: monitoring-tls
          mountPath: /run/secrets/stackrox.io/monitoring-tls
          readOnly: true
        - name: proxy-tls-volume
          mountPath: /run/secrets/stackrox.io/proxy-tls/
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: sensor-tls
          optional: true
          items:
          - key: sensor-cert.pem
            path: cert.pem
          - key: sensor-key.pem
            path: key.pem
          - key: ca.pem
            path: ca.pem
      - name: sensor-etc-ssl-volume
        emptyDir: {}
      - name: sensor-etc-pki-volume
        emptyDir: {}
      - name: additional-ca-volume
        secret:
          secretName: additional-ca-sensor
          optional: true
      - name: varlog
        emptyDir: {}
      - name: cache
        emptyDir: {}
      - name: sensor-bound-sa-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              path: token
              audience: openshift
              expirationSeconds: 3600
      
      - name: trusted-ca-volume
        configMap:
          name: injected-cabundle-stackrox-secured-cluster-services
          items:
            - key: ca-bundle.crt
              path: tls-ca-bundle.pem
          optional: true
      
      
      - name: monitoring-tls
        secret:
          secretName: sensor-monitoring-tls
      - name: proxy-tls-volume
        secret:
          secretName: sensor-proxy-tls
---
apiVersion: v1
kind: Service
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: sensor-monitoring-tls
spec:
  ports:
  - name: https
    port: 443
    targetPort: api
    protocol: TCP
  - name: monitoring-tls
    port: 9091
    targetPort: monitoring-tls
    protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: sensor-proxy
  namespace: "stackrox"
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: sensor-proxy-tls
spec:
  ports:
  - name: https
    port: 443
    targetPort: proxy-https
    protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: sensor-webhook
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ports:
  - name: https
    port: 443
    targetPort: webhook
    protocol: TCP
  selector:
    app: sensor
  type: ClusterIP
  sessionAffinity: None
