MIGRATION-SC/baseline-openshift/admission-controller-netpol.yaml








apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admission-control-no-ingress
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  podSelector:
    matchLabels:
      app: admission-control
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admission-control-monitoring-tls
  namespace: stackrox
  labels:
    app.kubernetes.io/component: admission-control
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
  - ports:
    - port: 9091
      protocol: TCP
  podSelector:
    matchLabels:
      app: admission-control
  policyTypes:
    - Ingress
