MIGRATION-SC/baseline-openshift/sensor-netpol.yaml








apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: collector
      - podSelector:
          matchLabels:
            service: collector
      - podSelector:
          matchLabels:
            app: admission-control
    ports:
    - port: 8443
      protocol: TCP
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor-monitoring-tls
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
    - ports:
      - port: 9091
        protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sensor-proxy
  namespace: stackrox
  labels:
    app.kubernetes.io/component: sensor
    app.kubernetes.io/instance: stackrox-secured-cluster-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-secured-cluster-services
    app.kubernetes.io/version: 4.11.x-642-g9ef4d6250d
    helm.sh/chart: sensor-400.11.0-642-g9ef4d6250d
    auto-upgrade.stackrox.io/component: "sensor"
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-secured-cluster-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-console
          podSelector:
            matchLabels:
              app: console
      ports:
        - port: 9444
          protocol: TCP
  podSelector:
    matchLabels:
      app: sensor
  policyTypes:
    - Ingress
